--- a/sass/base/_btn.scss
+++ b/sass/base/_btn.scss
@@ -12,7 +12,7 @@ Markup: html/btn.html
 .btn-ctn--border - Button call to action with border
 .btn-menu        - Button menu
 
-Style guide buttons
+Style guide: buttons
 */
 
 @mixin _white_space_reset_mixin() {
@@ -170,6 +170,11 @@ Style guide buttons
   }
 }
 
+// Button modifier to add space between the button and the element above.
+.btn--margin-top {
+  margin-top: 0.556em;
+}
+
 // Class that can be also used on a button wrapper since there are sometimes
 // situations where button is wrapped in unnecessary markup coming from a CMS.
 .btn--no-margin-bottom {
@@ -187,7 +192,7 @@ Button condensed element.
 
 Markup: html/btn-condensed.html
 
-Style guide buttons.btn--condensed
+Style guide: buttons.btn--condensed
 */
 
 .btn.btn--condensed {
@@ -202,7 +207,7 @@ Button block component.
 
 Markup: html/btn-block.html
 
-Style guide buttons.btn-block
+Style guide: buttons.btn-block
 */
 
 .btn-block {
@@ -228,7 +233,7 @@ Button search component.
 
 Markup: html/btn-search.html
 
-Style guide buttons.btn-search
+Style guide: buttons.btn-search
 */
 
 .btn.btn-search {
@@ -249,7 +254,7 @@ Button collapse element.
 
 Markup: html/btn-collapse.html
 
-Style guide buttons.btn-collapse
+Style guide: buttons.btn-collapse
 */
 
 .btn-collapse {
